[package]
name = "betterbackend"
version = "0.1.0"
edition = "2021"
links = "jsoncpp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4.1"

env_logger = "0.9"
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
confy = { version = "0.5.1", default-features = false, features = ["yaml_conf"] }

npy = "0.4.0"
ndarray-npy = "0.8.1"
ndarray = "0.15.6"

cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
